Enhancement for Issue #370: implement role based tab visibility. Better toolotip display.
git-svn-id: http://ala-fieldcapture.googlecode.com/svn/trunk/FieldCapture@921 63d11371-6d71-872f-44d1-802e8bf8a75e

--- a/web-app/css/capture.css
+++ b/web-app/css/capture.css
@@ -693,3 +693,9 @@ span.readonly-text {
 .nav-tab-small li a:hover {
     font-size: 0.9em;
 }
+
+#projectTabs .tooltip.in  {
+    opacity: 0.9;
+    filter: alpha(opacity=90);
+    font-size: 12px;
+}
